style(navbar & footer): new navbar & footer
create navbar & footer component with css, also create new font-family style called Air BNB Cereal

navbar-footer-init

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "Air BNB Cereal";
+  src: local("Air BNB Cereal"),url("../styles/fonts/AirBNB/AirbnbCereal.otf") format("opentype");
+}
