--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,86 @@
+/* Main Page Style */
 .layouts{
   min-height: 100vh;
   max-width: 100vw;
+  background-color: #FFF5EC;
+  font-family: "Air BNB Cereal" !important;
+}
+
+/* Navbar Style */
+.nav{
+  position: absolute;
+  padding: 3rem 0;
+  background-color: transparent;
+  overflow-y: hidden;
+  width: 100%;
+}
+
+.nav-item{
+  padding: 0 5rem;
+}
+
+.nav a{
+  color: #2E266F;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.nav a:hover{
+  color: #2E266F;
+  text-decoration-thickness: 2px;
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
+  text-underline-offset: 5px;
+}
+
+.nav-item-auth{
+  margin-left: auto;
+  padding: 0 5rem;
+}
+
+.nav-item-auth a{
+  color: white !important;
+}
+
+.nav-item-auth a:hover{
+  text-decoration: none !important;
+  color: #2E266F !important;
+}
+
+/* Footer style */
+footer {
+  position: relative;
+  min-height: 65vh;
+  max-height: 65vh;
+  bottom: 0;
+  background-color: #EFC81A !important;
+}
+
+.footer-content{
+  min-height: inherit;
+  max-height: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #2E266F;
+}
+
+.footer-title{
+  font-size: 72px;
+}
+
+.footer-sub-title{
+  font-size: 24px;
+}
+
+.footer-menu{
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3rem;
+}
+
+.footer-menu span{
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
