--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,45 +7,17 @@
 }
 
 /* Navbar Style */
-.nav{
-  position: absolute;
-  padding: 3rem 0;
-  background-color: transparent;
-  overflow-y: hidden;
-  width: 100%;
+@media only screen and (min-width: 768px){
+  .nav-auth-item a{
+    color: white !important;
+  }
+  
+  .nav-auth-item a:hover{
+    color: #2E266F !important;
+  }
 }
 
-.nav-item{
-  padding: 0 5rem;
-}
 
-.nav a{
-  color: #2E266F;
-  text-decoration: none;
-  font-size: 18px;
-}
-
-.nav a:hover{
-  color: #2E266F;
-  text-decoration-thickness: 2px;
-  text-decoration: underline;
-  text-decoration-thickness: 3px;
-  text-underline-offset: 5px;
-}
-
-.nav-item-auth{
-  margin-left: auto;
-  padding: 0 5rem;
-}
-
-.nav-item-auth a{
-  color: white !important;
-}
-
-.nav-item-auth a:hover{
-  text-decoration: none !important;
-  color: #2E266F !important;
-}
 
 /* Footer style */
 footer {
