style(footer): rebuild footer
rebuild the footer to make it responsive on any devices with some breakpoints

Fixes #1

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,7 +20,7 @@
 
 
 /* Footer style */
-footer {
+/* footer {
   position: relative;
   min-height: 65vh;
   max-height: 65vh;
@@ -55,4 +55,4 @@ footer {
 .footer-menu span{
   margin-left: 2rem;
   margin-right: 2rem;
-}
+} */
