style(landing-page): new style for page.
put the footer into the page outer and fix the margin betweeen main content and footer to 0px.

style landing-page.

--- a/src/styles/module-css/LandingPage.module.css
+++ b/src/styles/module-css/LandingPage.module.css
@@ -126,7 +126,6 @@ div.rightContent .mainFood img{
     margin-top: auto;
 }
 
-
 .sectionPageSize .newRecipeSection{
     display: flex;
     flex-direction: row;
@@ -178,7 +177,7 @@ div.rightContent .mainFood img{
 }
 
 .sectionPageSize .recipeListContent{
-    margin: 5%;
+    margin: 5% 5% 0 5% ;
 }
 
 .sectionPageSize .recipeListContent div{
