--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,3 +16,8 @@ code {
   font-family: "Air BNB Cereal";
   src: local("Air BNB Cereal"),url("../styles/fonts/AirBNB/AirbnbCereal.otf") format("opentype");
 }
+
+@font-face {
+  font-family: "Inter";
+  src: local("Inter"),url("../styles/fonts/Inter/Inter-Regular.otf") format("opentype")
+}
