--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,6 +11,17 @@ button.active{
   border-color: transparent !important;
 }
 
+.dropzone{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem;
+  color: #666666;
+}
+
+
 /* Navbar Style */
 @media only screen and (min-width: 768px){
   .nav-auth-item a{
