--- a/src/styles/module-css/NewRecipe.module.css
+++ b/src/styles/module-css/NewRecipe.module.css
@@ -1,7 +1,7 @@
 .container{
     width: 100%;
     min-height: 100vh;
-    padding-top: 3rem;
+    padding: 3rem 0;
     display: flex;
     justify-content: center;
    
@@ -9,6 +9,7 @@
 
 .container form {
     width: 70%;
+    min-height: 100vh;
 }
 
 .container form label{
@@ -45,39 +46,14 @@
     width: 100%;
     height: 40%;
     background-color: white;
-    margin-bottom: 1.5rem;
     border-radius: 15px;
+    margin-bottom: 1.25rem;
     padding: 1rem;
     font-size: 1.25rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.container .dropzone .thumbsContainer{
-    display: 'flex';
-    flex-direction: 'row';
-    flex-wrap: 'wrap';
-    margin-top: 16;
-}
-
-.container .dropzone .thumb{
-    display: 'inline-flex';
-    border-radius: 2;
-    border: '1px solid #eaeaea';
-    margin-bottom: 8;
-    margin-right: 8;
-    width: '100%';
-    height: '100%';
-    padding: 4;
-    box-sizing: 'border-box';
-}
-
-.container .dropzone .thumbInner{
-    display: 'flex';
-    width: '100%';
-    overflow: 'hidden';
 }
 
 .container .dropzone img{
@@ -99,4 +75,20 @@
 
 .container form p{
     display: none;
+}
+
+/* MEDIA QUERIES BREAKPOINTS */
+/* Phone breakpoints */
+@media only screen and (max-width: 575px) {
+    .container form .dropzone {
+        margin-bottom: 0.50rem;
+    }
+
+}
+
+/* Tablet breakpoints */
+@media only screen and ((min-width: 576px) and (max-width: 1024px)) {
+    .container form .dropzone {
+        margin-bottom: 0.75rem;
+    }
 }
