--- a/src/styles/module-css/Profile.module.css
+++ b/src/styles/module-css/Profile.module.css
@@ -64,7 +64,83 @@
     border-radius: 15px;
     object-fit: cover;
 }
+.profileModal {
+    width: 100%;
+    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
 
+}
+
+.profileModal form {
+    width: 70%;
+    height: max-content;
+}
+
+.profileModal form label {
+    width: 100%;
+}
+
+.profileModal form label input {
+    border: 0;
+}
+
+.profileModal form label input:focus {
+    outline: none !important;
+    border: 1px solid #EFC81A !important;
+    box-shadow: 0 0 10px aqua !important;
+}
+
+.profileModal form textarea {
+    width: 100%;
+    height: 30%;
+    border: 0;
+    border-radius: 15px;
+    resize: none;
+    padding: 1rem;
+    font-size: 1.25rem;
+}
+
+.profileModal form textarea:focus {
+    outline: none !important;
+    border: 1px solid #EFC81A !important;
+    box-shadow: 0 0 10px aqua !important;
+}
+
+.profileModal form .dropzone {
+    width: 100%;
+    height: 40%;
+    background-color: white;
+    border-radius: 15px;
+    margin-bottom: 1.25rem;
+    padding: 1rem;
+    font-size: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.profileModal .dropzone img {
+    display: 'block';
+    width: '100%';
+    height: '100%';
+    object-fit: 'cover';
+    object-position: 'center';
+}
+
+.profileModal .dropzone aside {
+    width: 100%;
+    height: 100%;
+}
+
+.profileModal .dropzone input {
+    margin-bottom: 1rem;
+}
+
+.profileModal form p {
+    display: none;
+}
 /* MEDIA QUERIES BREAKPOINTS */
 /* Phone breakpoints */
 @media only screen and (max-width: 575px) {
@@ -94,5 +170,26 @@
 
     .userFeature .featureItemCard span {
         font-size: 1rem;
+    }
+
+    .profileModal{
+        padding: 1rem;
+    }
+
+    .profileModal form .dropzone {
+        margin-bottom: 0.50rem;
+    }
+
+    .profileModal form .dropzone span,
+    .profileModal form input,
+    .profileModal form textarea {
+        font-size: 1rem;
+    }
+}
+
+/* Tablet breakpoints */
+@media only screen and ((min-width: 576px) and (max-width: 1024px)) {
+    .profileModal form .dropzone {
+        margin-bottom: 0.75rem;
     }
 }
